data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_690.wast
;; 1. **Test for Inconsistent Types in Loop Body**:    - Create a loop with an expected integer on the stack, then place a `nop` inside the loop. Follow this with an operation that produces a float.    - This should check if the `nop` instruction incorrectly allows continuation with a mismatched stack type.    - **Reasoning**: Ensures `nop` doesn't alter type validation within loops, and mismatched types are caught.

(assert_invalid
  (module
    (func $loop-with-nop
      (loop $label (result i32)
        (i32.const 42)
        (nop)
        (f32.const 3.14)
      )
    )
  )
  "type mismatch"
)